minor z-index issue, note: last commit involved some structural changes, treat HomepageComponent effectively as root element/component

--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -41,6 +41,7 @@
 }
 
 header  {
+    z-index: 10;
     top: 0;
     position: fixed;
 }
